Remove headless from development branch (#414)
* Removing headless from development branch

* ktlint fixes

* Returning code changed for market validation